add daniel and grace

--- a/index.html
+++ b/index.html
@@ -299,6 +299,24 @@
                         <p>Morgan Anita Wood (she/her) has been on the road with Hamilton for the past few years covering all three Schuyler sisters and was most recently seen as ‘Eliza’ with the And Peggy Tour. She has since introduced the First Lady at this past Fall’s ‘Broadway for Biden’ event, been involved in several workshops and readings and performed in the new play, “Loving and Loving” at Actor’s Theatre of Louisville earlier this year. She’s also performed at the Hollywood Bowl, the Utah Shakespeare Festival, the John W. Engeman Theatre and more. She’s thrilled to be back living in NYC and honored to be here!</p>
                     </div>
                 </li>                                                       
+                <li class="bios">
+                    <div class="bio-picture">
+                        <img src="grace.jpeg" alt="Picture of Grace Morgan">
+                    </div>
+                    <div class="bio-info">
+                        <h2>Grace Morgan</h2>
+                        <p>Grace is thrilled to be back supporting Broadway Sings as a PS166 parent of a kindergartener! Natl. Tours: The Phantom of the Opera (u/s Christine Daaé) Regional: Belle in A Christmas Carol (Denver Center), Sandy in Grease (Forestburgh Playhouse), Irene Molloy in Hello Dolly (Beef and Boards), Anne Egerman in A Little Night Music (Indiana Repertory). BFA in Musical Theater from The University of Michigan. Find me at www.gracemorgan.nyc and @gracemorgan12</p>
+                    </div>
+                </li>                                                       
+                <li class="bios">
+                    <div class="bio-picture">
+                        <img src="daniel.jpg" alt="Picture of Daniel Berryman">
+                    </div>
+                    <div class="bio-info">
+                        <h2>Daniel Berryman</h2>
+                        <p>Daniel is excited to sing tonight as a PS166 parent! He can be seen in upcoming performances of Legends: The Paul Simon Songbook across North America. 2019 Lotte Lenya Competition (1st Prize Winner). New York: Call Me Madame (Ens/Encores!), Sweeney Todd (Vacation Swing/Barrow Street), The Golden Apple (Ens/Encores!), The Fantasticks (The Boy/Theatre Center). Natl. Tours: Les Miserables (Swing), The Sound of Music (Ens). Regional: Sweeney Todd (Anthony/Denver Center), Hello, Dolly! (Ambrose/MUNY), The Most Happy Fella (Ciccio/Goodspeed), and Rent (Mark/The 5th Ave Theatre). BFA in Musical Theater from The University of Michigan. Love to Gem and the boys!</p>
+                    </div>
+                </li>                                                       
             </ul>
         </section>
         <footer class="center">
