add autumn; change d headshot

--- a/index.html
+++ b/index.html
@@ -317,6 +317,15 @@
                         <p>Daniel is excited to sing tonight as a PS166 parent! He can be seen in upcoming performances of Legends: The Paul Simon Songbook across North America. 2019 Lotte Lenya Competition (1st Prize Winner). New York: Call Me Madame (Ens/Encores!), Sweeney Todd (Vacation Swing/Barrow Street), The Golden Apple (Ens/Encores!), The Fantasticks (The Boy/Theatre Center). Natl. Tours: Les Miserables (Swing), The Sound of Music (Ens). Regional: Sweeney Todd (Anthony/Denver Center), Hello, Dolly! (Ambrose/MUNY), The Most Happy Fella (Ciccio/Goodspeed), and Rent (Mark/The 5th Ave Theatre). BFA in Musical Theater from The University of Michigan. Love to Gem and the boys!</p>
                     </div>
                 </li>                                                       
+                <li class="bios">
+                    <div class="bio-picture">
+                        <img src="autumn.jpeg" alt="Picture of Autumn Hurlbert">
+                    </div>
+                    <div class="bio-info">
+                        <h2>Autumn Hurlbert</h2>
+                        <p>Autumn, mom of Lincoln- 1st grade, is a Broadway performer and film actress.  She has also performed in 42 states and 11 countries in regional theaters, stadiums, churches, gyms, houses, ranches, restaurants, cruise ships, zoom rooms and almost any other space you can imagine a performance taking place!</p>
+                    </div>
+                </li>                                                       
             </ul>
         </section>
         <footer class="center">
