--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 Thank you all for attending our Broadway Sings concert! 
                 Your presence and support mean the world to us and our P.S. 166 community. 
                 Thank you for your generosity! 
-                Together, we are making a difference in the lives of student's education and 
+                Together, we are making a difference in the lives of students' education and 
                 fostering a love for the performing arts.
             </p>
             <img class="flyer" src="flyer.png" alt="Broadway Sings 2024">
@@ -148,14 +148,14 @@
                             <p><small>From Dear Evan Hansen By Benj Pasek and Justin Paul</small></p>
                         </li>
                         <li>
+                            <h4>Billy Tighe</h4>
+                            <h5>"Neverland"</h5>
+                            <p><small>From Finding Neverland by Gary Barlow and Eliot Kennedy</small></p>
+                        </li>
+                        <li>
                             <h4>Marc delaCruz</h4>
                             <h5>"Pure Imagination"</h5>
                             <p><small>By Leslie Bricusse and Anthony Newley</small></p>
-                        </li>
-                        <li>
-                            <h4>Jacob Gutierrez</h4>
-                            <h5>"Put on A Happy Face"</h5>
-                            <p><small>From Bye Bye Birdie By Charles Strouse and Lee Adams</small></p>
                         </li>
                         <li>
                             <h4>Kelvin Moon Loh</h4>
@@ -163,14 +163,18 @@
                             <p><small>From Man of La Mancha By Mitch Leigh and Joe Darion</small></p>
                         </li>
                         <li>
+                            <h4>Jacob Gutierrez</h4>
+                            <h5>"Put on A Happy Face"</h5>
+                            <p><small>From Bye Bye Birdie By Charles Strouse and Lee Adams</small></p>
+                        </li>
+                        <li>
                             <h4>Grace Morgan & Daniel Berryman</h4>
                             <h5>"All I Ask of You"</h5>
                             <p><small>From The Phantom of the Opera By Andrew Lloydd Webber</small></p>
                         </li>
                         <li>
-                            <h4>Cece Popp</h4>
-                            <h5>"Annie Medley"</h5>
-                            <p><small>From Annie By Charles Strouse and Martin Charnin</small></p>
+                            <h4>Vctor Lin</h4>
+                            <h5>"Medley for PS166"</h5>
                         </li>
                         <li>
                             <h4>Morgan Anita Wood</h4>
@@ -178,8 +182,9 @@
                             <p><small>From Giant By Michael John LaChiusa</small></p>
                         </li>
                         <li>
-                            <h4>VICTOR LIN</h4>
-                            <h5>"Medley for PS166"</h5>
+                            <h4>Cece Popp</h4>
+                            <h5>"Annie Medley"</h5>
+                            <p><small>From Annie By Charles Strouse and Martin Charnin</small></p>
                         </li>
                     </ol>
                 </div>
@@ -205,11 +210,6 @@
                             <h4>Kara Lindsay & Kevin Massey</h4>
                             <h5>"You'll Be In My Heart"</h5>
                             <p><small>From Tarzan By Phil Collins</small></p>
-                        </li>
-                        <li>
-                            <h4>Billy Tighe</h4>
-                            <h5>"Neverland"</h5>
-                            <p><small>From Finding Neverland by Gary Barlow and Eliot Kennedy</small></p>
                         </li>
                         <li>
                             <h4>Autumn Hurlbert</h4>
