--- a/index.html
+++ b/index.html
@@ -326,6 +326,15 @@
                         <p>Autumn, mom of Lincoln- 1st grade, is a Broadway performer and film actress.  She has also performed in 42 states and 11 countries in regional theaters, stadiums, churches, gyms, houses, ranches, restaurants, cruise ships, zoom rooms and almost any other space you can imagine a performance taking place!</p>
                     </div>
                 </li>                                                       
+                <li class="bios">
+                    <div class="bio-picture">
+                        <img src="casey.jpeg" alt="Picture of Casey Likes">
+                    </div>
+                    <div class="bio-info">
+                        <h2>Casey Likes</h2>
+                        <p>Casey is known for his critically acclaimed leading performances as Marty Mcfly in Broadways Back to the Future and William in Broadway's Almost Famous. Performer (since age 3), acclaimed director, writer, and producer. Recently the leading role in MGM’s film Dark Harvest and “Kiss” legend Gene Simmons in Spinning Gold. Jimmy Awards Finalist. Film: Everything Must Go. TV: The Birch, Acts of Crime (Dir. Sam Esmail), American Blackout. Regional: A Christmas Carol. @justcaseylikes</p>
+                    </div>
+                </li>                                                       
             </ul>
         </section>
         <footer class="center">
